[package]
name = "assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
reqwest = { version = "0.11.13", features = ["blocking"] }
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["alloc"] }
async-trait = { version = "0.1.59" }
